k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang
  labels:
    app: golang

spec:
  replicas: 2

  selector:
    matchLabels:
      app: golang

  template:
    metadata:
      labels:
        app: golang

    spec:
      containers:
      - name: golang
        image: niruth03/golang:v1
        imagePullPolicy: Always

        ports:
        - containerPort: 80

        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
