k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: golang
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: golang.local
  http:
    paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: golang
            port:
              number: 80
